# thisday

./: .gitignore  code_output.txt  main.py  pyproject.toml  test.py
cli/: layout.py  panels.py  root_cli.py
core/: clock.py  time_of_day.py
models/: history_item.py  news.py  weather.py
providers/: news_provider.py  weather_provider.py
scratch/: textual_smoke.py
services/: greeting_service.py  history_service.py  news_service.py  weather_service.py
ui/: app.py
utils/: ascii.py  banner.py  padding.py  themes.py  weather_icons.py
